test/ill-formed/0050_pointer_array_param.c
void f (int *a[static const restrict 1]) {}
